• Improved header display for Client Recommendation View; • Fixed small layout bugs with Client Rec View;  • Attempting to add the 'complex fields' to the Client Rec view (copied from building template; • Partially added new modal in city template to display a building's video if it exists - not finished yet, still some issues to figure out

--- a/client/templates/quickViewBuilding/quickViewBuilding.styl
+++ b/client/templates/quickViewBuilding/quickViewBuilding.styl
@@ -51,3 +51,9 @@
 
   a.toggle-units
     color #000
+
+  .quickViewTableIcons
+    button
+      background transparent
+      border none
+      padding 0
